[package]
name = "ck_cli"
version = "2.1.1"
authors = ["AnnatarHe <Annatar.He+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
regex = "1.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json"] }
futures = { version = "0.3.18" }
colour = "0.6.0"
toml = "0.5.8"
dirs = "4.0.0"