[package]
name = "ck_cli"
version = "2.1.1"
authors = ["AnnatarHe <Annatar.He+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "4.5.1", features = ["derive", "clap_derive"] }
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
futures = { version = "0.3.30" }
colour = "0.7"
toml = "0.8"
dirs = "5.0.1"
inquire = "0.6.2"
viuer = "0.7.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
